# OsInBrowser

./: .gitpod.Dockerfile  .gitpod.yml  DockerFile  Dockerfile  LICENSE  README.md  cloudbuild.yaml  docker-compose.yml  todos.md
ReleaseNote/: version_1.0.0.md
backend/: Cargo.toml
cypress/: Dockerfile  cypress.config.ts  docker-compose.yaml  package-lock.json  package.json
emulation_test/: package-lock.json  package.json
my-solid-project/: fs.9p.json  fs.bfs.json  index.html  package-lock.json  package.json  public.json  tsconfig.json  vite.config.ts
os_with_rust/: Cargo.toml  index.html
os_with_rust/src/: index.rs  main.rs
os_with_rust/src/apps/: hello_world.rs
os_with_rust/src/components/: back_ground.rs  main.rs  mod.rs  window.rs
os_with_rust/src/components/desktop/: desktop.rs  dock.rs  menubar.rs  mod.rs
os_with_rust/src/components/desktop/dock/: dock.rs  dock_function.rs  mod.rs
os_with_rust/src/components/desktop/menubar/: menubar.rs  mod.rs
os_with_rust/src/components/window/: mod.rs  window.rs  window_function.rs
os_with_rust/src/context/: mod.rs  process_directory_context.rs
os_with_rust/src/hooks/: mod.rs  use_drag.rs  use_effect_once.rs  use_event.rs  use_measure.rs  use_mut_latest.rs  use_raf_state.rs  use_resize.rs  use_resize_2.rs  use_resize_3.rs  use_resize_4.rs  use_unmount.rs
os_with_rust/src/style/: desktop.scss  global.scss  styles.scss  window.scss
os_with_rust/src/types/: process_directory.rs
os_with_rust/src/utils/: dock.rs  mod.rs  process_directory.rs  resize_function.rs  web_sys_ext.rs  window.rs
(+204 files in other folders)
