[package]
name = "os_with_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
gloo-console = "0.2.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = "1"
js-sys = "0.3"
gloo = "0.7"
stylist = { version="0.10.0", features = [
    "yew_integration",
    "yew_use_style",
] }

[dependencies.web-sys]
version = "0.3.58"
features = [
    "BeforeUnloadEvent",
    "Element",
    "UrlSearchParams",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "BinaryType",
    "DomRectReadOnly",
    "Navigator",
    "Geolocation",
    "Coordinates",
    "Position",
    "PositionError",
    "PositionOptions",
    "File",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    "HtmlMediaElement",
    "TimeRanges",
    "Touch",
    "TouchList",
    "HtmlLinkElement",
    "HtmlCollection",
    "Blob",
    "StorageEvent",
    "HtmlDivElement",
    "HtmlElement",
    "DragEvent",
    "MouseEvent",
    "EventListenerOptions",
    "Document",
    "Window",
    "NodeList",
    "CssStyleDeclaration",
    "DomRect",
    "DomTokenList"
]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "js"
]